analogue Change Log

Version 0.16-1

	* Fix testthat usage.
	Reported by Handley Wickham

	* Stratiplot: now handles a matrix as argument `x` via an
	S#3 method for class `"matrix"`.

Version 0.16-0

	* Released to CRAN 18th November 2014

Version 0.15-0

	* tran: now has `method = "colCenter"` for centering by
	columns. Also gains:

	  `method = "log1p"` for accurate computation of log(1 + x)
	  where |x| << 1 using `log1p()`.

	  `method = "expm1"` for accurate computation of exp(x) - 1
	  where |x| << 1 using `expm1()`.

	* plot.sppResponse: now documented.

	* Stratiplot: new argument `yticks` allows user-specified tick
	locations on the y axis (age/depth).

	* Plot3d, plot3d.prcurve: These functions are now removed
	from analogue. `plot3d.prcurve` is available in the new
	analogueExtra package.

Version 0.14-0

	* Released to CRAN 28th August 2014

Version 0.13-6

	* Plot3d: new name for the previous `plot3d.prcurve()` method.
	Renamed to avoid having to export a method from the namespace,
	which allows **rgl** to be relegated to Suggests.

	* plot3d.prcurve: deprecated this S3 method and removed **rgl**
	from the package dependencies. **rgl** is now in Suggests, which
	means it is not needed to install the package. This seems to be
	causing some problems for Mac OS users.

	* evenSample: new function returns the number of samples per
	gradient segment. Has a `plot()` method.

	* Pollen, Biome, Location, Climate: data sets from the North
	American Modern Pollen Database updated to version 1.7.3.

	* Imports: lattice moved from Depends to Imports. analogue now
	exports the generics densityplot, dotplot, and histogram imported
	from the lattice namespace.

Version 0.13-5

	* n2: new utility function to compute Hill's N2 for sites
	or species.

	* optima: added bootstrap estimates of species WA optima.

	* roc: fix a bug in the computation of AUC from the U statistic.

Version 0.13-4 13 Feb 2014

	* crossval.pcr: Fixed a number of bugs in the method for PCR